Source/WebKit/UIProcess/WebAuthentication/WebAuthnProcessProxy.cpp
@@ -161,6 +161,8 @@ void WebAuthnProcessProxy::didFinishLaunching(ProcessLauncher* launcher, IPC::Co
     if (xpc_connection_t connection = this->connection()->xpcConnection())
         m_throttler.didConnectToProcess(xpc_connection_get_pid(connection));
 #endif
+
+    beginResponsivenessChecks();
 }
 
 void WebAuthnProcessProxy::updateProcessAssertion()
